feat(notification): implement email notification service with templates (NOTIF-01, closes #62)
- Add spring-boot-starter-mail, spring-boot-starter-thymeleaf, spring-retry deps
- Enable @EnableRetry on CivilEcommerceApplication
- Implement NotificationServiceImpl with JavaMailSender + SpringTemplateEngine;
  all send methods are @Async and @Retryable (max 3 attempts, 2s backoff × 2)
- Create 4 Thymeleaf HTML email templates:
    templates/email/order-confirmation.html
    templates/email/shipping-update.html
    templates/email/password-reset.html
    templates/email/registration-welcome.html
- Wire SMTP config via MAIL_HOST/PORT/USERNAME/PASSWORD env vars
- Tests: 7 unit (EmailNotificationServiceTest) + 4 template rendering (EmailTemplateRenderingTest)
- Fix pre-existing test regressions from SRCH-01/PAY-01/PAY-02 sessions:
    ProductServiceImplTest: add DomainEventPublisher mock; update 10 tests to
      reflect new repository-delegating search/category/advancedSearch methods
    ProductControllerV2Test: update constructor call to pass Optional.empty()
    AdminSearchControllerIntegrationTest: reset singleton mock in @BeforeEach
    OrderTest: update enum count assertion (5 → 7 after PAID/PAYMENT_FAILED added)
    RazorpayClientAdapterTest: wire PaymentClient.payments mock for refund test